# Parking-system

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  estacionamiento.db  pyproject.toml  requirements.txt  test_parking_system.py
app/: background_tasks.py  config.py  crud.py  database.py  main.py  models.py  schemas.py  simulated_barrera.py  utils.py  websockets.py
frontend/: Dockerfile.frontend  package-lock.json  package.json  tailwind.config.mjs
frontend/components/: Layout.js  Navbar.js  Notification.js  Scanner.js  TicketActionModal.js  TicketList.js
frontend/pages/: _app.js  auditoria.js  cajero.js  configuracion.js  index.js  reports.js  salida.js  settings.js  test.js  tickets.js
frontend/services/: api.js
