[project]
name = "parking-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi-socketio>=0.0.10",
    "fastapi>=0.115.6",
    "httpx>=0.28.1",
    "pillow>=11.0.0",
    "pydantic>=2.10.3",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "python-socketio>=5.11.4",
    "qrcode>=8.0",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.32.1",
]
